force-app/main/default/objects/TASKRAY__trRecordTypeMapping__c/TASKRAY__trRecordTypeMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>TaskRay Record Type Mapping</label>
</CustomObject>