force-app/main/default/objects/TASKRAY__trRecordTypeMapping__c/fields/TASKRAY__Assoc_Task_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__Assoc_Task_Record_Type_Id__c</fullName>
    <externalId>true</externalId>
    <label>Mapped Task Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>