force-app/main/default/objects/TASKRAY__trRecordTypeMapping__c/fields/TASKRAY__Field_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__Field_Set_Name__c</fullName>
    <externalId>true</externalId>
    <label>Field Set Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>