force-app/main/default/objects/TASKRAY__trRecordTypeMapping__c/fields/TASKRAY__Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__Record_Type_Id__c</fullName>
    <externalId>true</externalId>
    <label>Record Type Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>